[package]
name = "llm-web-api-client"
version = "0.1.0"
edition = "2021"

[dependencies]
tokio = { version = "1.11", features = ["full"] }
hyper = { version = "0.14", features = ["full"] }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
xin = { git = "https://github.com/apepkuss/xin.git", branch = "main" }
